<resources>
    <!-- About -->
    <string name="about">About Me</string>
    <string name="about_body"><![CDATA[
         <b>Avi Parshan</b> created this app, Check his website and social media:<br/>
        <a href=\'http://aviparshan.com\'>Website</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/aviinfinity\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://www.youtube.com/channel/UCYzocrbgFApPAGhq7PAw9Gw\'>YouTube</a>&nbsp;&nbsp;
        <a href=\'https://www.linkedin.com/in/aviparshan\'>LinkedIn</a>&nbsp;&nbsp;
        <a href=\'https://www.facebook.com/appdeomcracy\'>Facebook</a>
    ]]></string>
    <string name="dismiss">Dismiss</string>
    <string name="feedback">Contact Me</string>
    <string name="rate_app">Rate App</string>
    <string name="open_intent">Open in Fusion</string>

    <string name="edit">Enter your new address</string>
    <string name="url_a">http://</string>

    <string name="app_name">Fusion Browse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="url">URL</string>
    <string name="enter">Enter</string>
    <string name="web">https://www.google.com</string>
    <string name="menu_refresh">Refresh</string>
    <string name="no">No Text Entered</string>
    <string name="textview">TextView</string>
    <string name="clear">Clear Cookies</string>
    <string name="other_apps">Other Apps</string>
    <string name="rate_error">Google Play Isn\'t Installed</string>
    <string name="rate">Rate App</string>
    <string name="shared">Shared through Simple Browse</string>
    <string name="link">Share Link</string>
    <string name="submit">Submit</string>
    <string name="change">Current URL</string>
    <string name="enterURl">Copy or Change Links</string>
    <string name="share_link">Share...</string>
    <string name="reload">Refresh page</string>
    <string name="copy_address">Copy Address</string>
    <string name="shared_by">Shared by Fusion Browser</string>
    <string name="sent_via">Sent via Fusion Browser for Android: https://play.google.com/store/apps/details?id=com.aviparshan.simplebrowse</string>
    <string name="no_email">There are no email clients installed.</string>
    <string name="sharedby">Shared by Fusion Browser</string>
    <string name="cookies">Cookies have been cleared</string>
    <string name="history">History and Cache Have Been Destroyed</string>
    <string name="fusion_browser">Fusion Browser</string>
    <string name="request">Request Desktop Site</string>
    <string name="diffUrl">Please try again with a different URL</string>
</resources>
