<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share"
        app:showAsAction = "never"
        android:title="@string/share_link" />
    <item
        android:id="@+id/cookies"
        app:showAsAction = "never"
        android:title="@string/clear" />
    <item
        android:id="@+id/reload"
        app:showAsAction = "never"
        android:title="@string/reload" />
    <item
        android:id="@+id/desktop"
        app:showAsAction = "never"
        android:checkable="true"
        android:title="@string/request" />
</menu>
